# PlatON-Go

./: .gitignore  .gitmodules  .golangci.yml  .travis.yml  .travis.yml.new  AUTHORS  Dockerfile  Dockerfile.alltools  ErrWrongBlsPubKey.sh  Jenkinsfile  KafkaMsg.md  Makefile  README.md  appveyor.yml  circle.yml  go.mod  go.sum  interfaces.go  sonar-project.properties
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md
accounts/: accounts.go  accounts_test.go  hd.go  manager.go  url.go  url_test.go
cases/: .gitignore  Makefile  README.md  conftest.py  pytest.ini  requirements.txt
common/: address.go  address_json_extension.go  address_test.go  args_const.go  atomic_bool.go  atomic_bool_test.go  big.go  bytes.go  common.go  debug.go  errors.go  flow_metrics.go  format.go  ioutils.go  jsonutils.go  path.go  platonstats_types.go  platonstats_types_test.go  rlp_utils.go  size_test.go  test_utils.go  timeUtil.go  types.go  types_test.go  version_utils.go
config/: cbft-config.toml
consensus/: bft_mock.go  consensus.go  errors.go  sign.go
console/: bridge.go  bridge_test.go  console.go  console_test.go
core/: bench_test.go  blockChainReactor.go  block_validator.go  block_validator_test.go  blockchain.go  blockchain_cache.go  blockchain_clean.go  blockchain_clean_test.go  blockchain_insert.go  blockchain_reactor.go  blockchain_reactor_test.go  blockchain_reader.go  (+50 more)
life/resolver/builtins/: CMakeLists.txt  Makefile  ashriti3.c  compiler_builtins.hpp  divti3.c  floattidf.c  floatuntidf.c  modti3.c  multi3.c  print128.h  printqf.cpp  printqf.h  udivti3.c  umodti3.c
(+9082 files in other folders)
